--- a/src/main/resources/templates/MedarbejderHome.html
+++ b/src/main/resources/templates/MedarbejderHome.html
@@ -16,7 +16,7 @@
                 <li><a href="/static">HOME</a></li>
 
         </div>
-</section>
+ </section>
 <div class="container">
     <h2>Vaelge Din Opgave </h2>
     <div class="price-row">
@@ -31,7 +31,7 @@
                 <li>Godkente Data</li>
                 <li> Support</li>
             </ul>
-            <a href="/CreateKunde" class="hero-btn"><button>Admin Login</button></a>
+            <a href="/Admin" class="hero-btn"><button>Admin Login</button></a>
         </div>
         <div class="price-col">
             <p>Udvikler</p>
