--- a/src/main/resources/templates/værksted.html
+++ b/src/main/resources/templates/værksted.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org" lang="">
 <head>
   <meta charset="ISO-8859-1">
-  <title>Vaerksted Management System</title>
+  <title>Client Management System</title>
   <link rel="stylesheet"
         href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
@@ -11,7 +11,7 @@
 <body>
 <nav class="navbar navbar-expand-md bg-dark navbar-dark">
   <!-- Brand -->
-  <a class="navbar-brand" href="#">Vaerksted Management System</a>
+  <a class="navbar-brand" href="#">Clients Management System</a>
 
   <!-- Toggler/collapsibe Button -->
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -19,57 +19,75 @@
   </button>
 
   <!-- Navbar links -->
-<!--  <div class="collapse navbar-collapse" id="collapsibleNavbar">-->
-<div class="top-nav">
-        <a href="/EditKunde" class="hero-btn">Edit</a>
-</div>
+  <a href="/" class="hero-btn">Home</a>
+  </li>
+  </ul>
+  </div>
 </nav>
 <br>
 <br>
 <div class = "container">
   <div class = "row">
     <div class ="col-lg-6 col-md-6 col-sm-6 container justify-content-center card">
-      <h1 class = "text-center"> Create New Skade </h1>
+      <h1 class = "text-center"> Registrer Ny Skader</h1>
       <div class = "card-body">
         <form th:action="@{/Kunde}" th:object = "${Kunde}" method="POST">
           <div class ="form-group">
-            <label> Kunde First Name </label>
+            <label> Kunde Oplysninger </label>
             <input
                     type = "text"
-                    name = "firstName"
-                    th:text = "${firstName}"
+                    name = "CprNummer"
+                    th:text = "${CprNummer}"
                     class = "form-control"
                     placeholder="Enter kunde First Name"
             />
           </div>
 
           <div class ="form-group">
-            <label> Kunde Last Name </label>
+            <label> Lejeaftales ID </label>
             <input
                     type = "text"
                     name = "lastName"
-                    th:text = "${lastName}"
+                    th:text = "${LejeaftalesID}"
                     class = "form-control"
                     placeholder="Enter Kunde Last Name"
             />
           </div>
 
           <div class ="form-group">
-            <label> Kunde Email </label>
+            <label> SkadesType </label>
             <input
                     type = "text"
-                    name = "email"
-                    th:text = "${email}"
+                    name = "Skadestype "
+                    th:text = "${SkadeType}"
                     class = "form-control"
-                    placeholder="Enter Kunde Email"
+                    placeholder="Enter Skadestype"
             />
           </div>
+          <div class ="form-group">
+            <label> SkadesType </label>
+            <input
+                    type = "text"
+                    name = "SkadestypePris "
+                    th:text = "${Skadetypepris}"
+                    class = "form-control"
+                    placeholder="Enter Skadestype"
+            />
 
-          <div class = "box-footer">
-            <button type="submit" class = "btn btn-primary">
-              Submit
-            </button>
-          </div>
+            <div class ="form-group">
+              <label> SkadesType </label>
+              <input
+                      type = "text"
+                      name = "SkadestypePris "
+                      th:text = "${SkadetypeID }"
+                      class = "form-control"
+                      placeholder="Enter SkadestypeID"
+              />
+              <div class = "box-footer">
+                <button type="submit" class = "btn btn-primary">
+                  Submit
+                </button>
+              </div>
         </form>
 
       </div>
@@ -78,4 +96,3 @@
 </div>
 </body>
 </html>
-
