--- a/src/main/resources/templates/RegistrerLejeAftale.html
+++ b/src/main/resources/templates/RegistrerLejeAftale.html
@@ -122,7 +122,7 @@
                 </tr>
                 <tr>
                     <td><button type="submit" form="deleteAftale">NEJ!</button></td>
-                    <td><button type="submit" form="createAftale">NEJ!</button></td>
+                    <td><button type="submit" form="createAftale">JA!</button></td>
                 </tr>
             </table>
 
